# diffcount-rs

./: .editorconfig  .gitignore  Cargo.toml  build_release.bat  publish_readme.txt  readme.md
src/: channel.rs  main.rs  main_window.glade  main_window.rs  state.rs
