[package]
name = "diffcount-rs"
version = "0.1.0"
authors = ["wokket <wokket@gmail.com>"]
edition = "2018"
description = "GTK app for lab counting of cells."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.8.1"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_18"]